# chip8-emu

./: .gitignore  CMakeLists.txt  README.MD  chip8-emu
include/: beep_wav.h  render.h  sdl.h
include/chip8/: cpu.h  opcodes.h  reg.h  sys.h  timers.h
src/: beep_wav.c  main.c  render.c  sdl.c
src/chip8/: cpu.c  cpu.h  opcodes.c  reg.c  sys.c  timers.c
